Fixed missing image on Chrysler Imperial page, changed aside background color, and adjusted spacing around hr tags.

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -43,7 +43,7 @@ aside {
     margin-left: 15px;
     /*flex-shrink: 2;*/
     /*box-sizing: border-box;*/
-    background-color: #ccc;
+    background-color: #faf9e9;
 
 }
 
@@ -79,23 +79,38 @@ h4 {
     color: #d9112d;
 }
 
-hr {
-    border: 1px solid #aaa;
-    margin: 15px auto 10px;
+p {
+    margin-bottom: 10px;
 }
 
-td.photo-detail-td {
+hr {
+    border: 1px solid #aaa;
+    margin: 10px auto 10px;
+}
+
+td.hr-style {
+    border-top: 0;
+    padding: 5px;
+    margin: 10px auto 10px;
+}
+
+td.photo-detail-td,
+td.photo-caption-td {
     vertical-align: top;
     text-align: left;
-    /*margin-bottom: 10px;*/
-    padding-top: 0;
-    padding-bottom: 0;
+    /*margin-bottom: 5px;*/
+    padding: 10px 5px 10px 5px;
     border-top: 0;
 }
 
-.alert {
-    margin: 10px;
-    padding: 10px 0 0 10px;
+.alert p {
+    margin-top: 5px;
+    text-align: center;
+    /*padding: 10px 0 0 10px;*/
+}
+
+.alert-danger {
+    border-radius: 8px;
 }
 
 /* styles for tablet */
